clusters/cluster0/kubernetes/apps/gregbob/gregbob/art/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: art
  namespace: gregbob
  labels:
    app: art
spec:
  selector:
    matchLabels:
      app: art
  template:
    metadata:
      labels:
        app: art
    spec:
      imagePullSecrets:
        - name: gitea-registry-pull-secret
      containers:
        - name: art
          image: git.gregbob.net/szkud/site:latest
          imagePullPolicy: Always
          ports:
            - name: art-port
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 64Mi
              cpu: 10m
            limits:
              memory: 128Mi
