clusters/cluster0/kubernetes/apps/gregbob/gregbob/art/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: art-service
  namespace: gregbob
spec:
  type: ClusterIP
  selector:
    app: art
  ports:
    - name: art-port
      port: 80
      protocol: TCP
