clusters/cluster0/kubernetes/apps/gregbob/gregbob/art/art-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: art
  namespace: gregbob
spec:
  hostnames:
    - art.gregbob.net
  parentRefs:
    - name: wildcard-gregbob-net
      namespace: network
  rules:
    - backendRefs:
        - name: art-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
